# mongotest1

./: CMakeLists.txt  Dockerfile  README.md  docker-compose-sharding.yml  docker-compose.yml  movies.thrift
cmake/: Findlibmemcached.cmake
config/: jaeger-config.yml  service-config.json
config/mongodb/movie-id/: init-config.js  init-router.js  init-shard_0.js  init-shard_1.js  init-shard_2.js
config/mongodb/user/: init-config.js  init-router.js  init-shard_1.js  init-shard_2.js  init-shard_3.js
docker/mcrouter/: Dockerfile
docker/openresty-thrift/: AUTHORS.md  CHANGELOG.md  COPYRIGHT  README.md  appveyor.yml  gen_travis.lua  nginx.conf  nginx.vh.default.conf  travis.yml.etlua
docker/openresty-thrift/lua-bridge-tracer/: CMakeLists.txt  LICENSE  README.md
docker/openresty-thrift/lua-thrift/: GenericObjectPool.lua  Object.lua  RpcClient.lua  RpcClientFactory.lua  TBinaryProtocol.lua  TBufferedTransport.lua  TCompactProtocol.lua  TFramedTransport.lua  (+7 more)
docker/wrk2-opentracing/: Dockerfile
gen-cpp/: MovieInfoService.cpp  MovieInfoService.h  MovieInfoService_server.skeleton.cpp
gen-lua/: movies_MovieInfoService.lua
scripts/: compose_review.sh  gen_mongo_configs.py  mongodb_bootstrap.sh  register_movies.sh  register_users.sh  write_movie_info.py
src/: CMakeLists.txt  tracing.h  utils.h  utils_memcached.h  utils_mongodb.h
src/MovieInfoService/: MovieInfoHandler.h  MovieInfoService.cpp
src/RecommenderService/: CMakeLists.txt  RecommenderHandler.h  RecommenderService.cpp
src/UserLikesService/: CMakeLists.txt  UserLikesHandler.h  UserLikesService.cpp
(+36 files in other folders)
